# FinWise-AI

./: .gitignore  CHANGELOG_OCR.md  INFORME_IMPLEMENTACION.md  Makefile  OCR_MOBILE_GUIDE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_SUMMARY.md  PR_SUMMARY.md  README.md  REQUIREMENTS.md  out.txt  verify_ocr_workflow.py
backend/: .dockerignore  .env.docker.example  .env.example  .ruff.toml  CHANGELOG_OCR.md  DOCKER.md  DOCKERFILE_OPTIMIZATION.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  ENV_CONFIG.md  IMPLEMENTATION_SUMMARY.md  MEJORAS_OCR.md  OCR_COMPLETE_REPORT.md  OCR_IMPROVEMENTS_IMPLEMENTED.md  OCR_IMPROVEMENT_PLAN.md  OCR_MAIN_ENDPOINT_INTEGRATION.md  OCR_PHASE2_IMPLEMENTED.md  OCR_PHASE3_IMPLEMENTED.md  PREPROCESSING_IMPROVEMENTS.md  REACT_AGENT_ENHANCEMENT.md  README.md  TESSERACT_SIGSEGV_FIX.md  VERIFICATION_CHECKLIST.md  demo_multilang_ocr.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  test_multilang_ocr.py  test_ocr_quality_improvement.py  test_preprocessing_improvements.py  verify_ocr_implementation.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  tesseract_config.py
backend/app/api/: deps.py
backend/app/core/: agent.py  agent_secure.py  exceptions.py  file_storage.py  llm.py  security.py  storage.py
backend/app/db/: base.py  session.py
backend/app/models/: auth.py  base.py  category.py  notification.py  report.py  transaction.py  user.py
backend/app/ocr_config/: __init__.py  ocr_config.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: API_EXAMPLES.md  DOCKERFILE_OPTIMIZATION.md  FILE_STORAGE.md  MULTILANG_OCR.md  OCR_IMPROVEMENTS.md  OCR_OVERVIEW.md  OCR_WORKFLOW.md  OCR_WORKFLOW_DIAGRAMS.md  PERFORMANCE_IMPROVEMENTS.md  STORAGE_IMPLEMENTATION_SUMMARY.md
backend/examples/: ocr_improvements_usage.py
backend/tests/: conftest.py  test_dependencies.py  test_main.py  test_multilang_ocr_api.py  test_ocr_improvements.py  test_ocr_phase2.py  test_ocr_phase3.py  test_ocr_workflow.py  test_performance_optimizations.py
(+128 files in other folders)
