[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.118.3",
    "pydantic-ai-slim[openai]>=1.0.17",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "zuban>=0.1.0",
]
