[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.4",
    "pydantic-ai-slim[openai]>=1.9.1",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.27",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "uuid>=1.30",
    "pytesseract>=0.3.13",
    "pillow>=12.0.0",
    "opencv-python>=4.12.0.88",
    "easyocr>=1.7.2",
    "paddleocr>=3.3.0",
    "doctr>=1.9.0",
    "python-multipart>=0.0.20",
    "pymupdf>=1.26.5",
    "rembg>=2.0.67",
    "onnxruntime>=1.23.2",
    "faster-whisper>=1.2.0",
    "aioboto3>=15.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
    "zuban>=0.1.0",
]
prod = [
    "uvicorn>=0.38.0",
    "psycopg2-binary>=2.9.11",
]
